// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alarm Screen test Alarm screen matches snapshot time 1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 60,
          "fontWeight": "bold",
        },
        Object {
          "margin": 8,
        },
        Object {
          "color": "#E4F96A",
        },
      ]
    }
  >
    6:00 PM
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Button
    color="#505050"
    onPress={[Function]}
    title="Turn Off Alarm"
  />
</View>
`;

exports[`Alarm Screen test Alarm screen matches snapshot time 2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#DDDDDD",
          "fontSize": 60,
          "fontWeight": "bold",
        },
        Object {
          "margin": 8,
        },
        Object {
          "color": "#E4F96A",
        },
      ]
    }
  >
    12:00 AM
  </Text>
  <View
    style={
      Object {
        "height": 8,
        "width": 8,
      }
    }
  />
  <Button
    color="#505050"
    onPress={[Function]}
    title="Turn Off Alarm"
  />
</View>
`;
